move to Ubuntu 18.04

--- a/awx.yml
+++ b/awx.yml
@@ -8,7 +8,7 @@
     pip_install_packages:
       - docker
       - docker-compose
-      - selinux
+#      - selinux
 
   pre_tasks:
     - name: Update apt cache.
